Goblin Camp Changelog

-- version 0.24 (future release) --

* Engine changes:
  - Fix Dev Console to work with python3 (47c8a74b)
  - Drop python2.7 support (20678014)

* Internal changes:
  - Imporove cmake build files (78e83a1f, 645e250f)
  - Improvements for future windows build by HexDecimal1 (ec1fae23, b06e32a7, 7a608487, d34df550, d3489f77)
  - Do not use threads when threads are disabled (ee1dbac7)
  - Improve key press efficiency when no key is pressed (c1183040)
  - Import boost::thread -> std::thread patch from goblin-camp-legacy written
    by CatPlusPlus (c51c7fe1 -> 0d2930ef)
  - Do `GetShuffledDirections` same way as CatPlusPlus did in 3078cba1
    but with HexDecimal1's implementation inside (bd8c26c3, 39bc0456)
  - Add underscore to `UIState` names to make code more readable ()

-- version 0.23 (2023-07-09) --

* Fix support for graphical tiles in SDL2:
  - Restore basic functionality restored (2e1e9d63)
  - Fixed Loading screen in threads mode in SDL2 renderer (5d773831)
  - Fix problem with cursor position calculation in SDL2 renderer (020252a8)
  - Fix problem with not all tile icons have been shown, unless tileset is reloaded while game is already running (4309f1a8)
  - Fix drag-n-drop camera movement ratio for graphical tiles (925ff077 and b4770736)
  - Add "Classical Text Mode" item to tileset list to switch text-only mode on and off (c47d4f1c)
  - Fix keyboard scrolling rate for big graphical tiles (049f2315)
* Added double sized version of Default Tileset to play on screens with high DPI (11f2623f)
* Fix libtcod deprecation warnings:
  - TCODColor deprecation warnings (0adc0bca, d055503b)
  - TCODConsole::print deprecation warnings in GCamp.cpp (9d2790d9, 77b4aca6, 2d052fd2, 40f19efe)

-- version 0.221 (2022-08-01) --

Bugfix release

* Fix problem with StockManager Dialog bigger than screen size (ddf18716)

-- version 0.22 (2022-07-31) --

Main goal of this release is to make Goblin Camp build and run on modern systems. No new