@@ -6,6 +6,9 @@ Goblin Camp Changelog
   - Fix Dev Console to work with python3 (47c8a74b)
   - Drop python2.7 support (20678014)
 
+* Bug fixes:
+  - Fix opening sidebar while trying to place building over obstacle ()
+
 * Internal changes:
   - Imporove cmake build files (78e83a1f, 645e250f)
   - Improvements for future windows build by HexDecimal1 (ec1fae23, b06e32a7, 7a608487, d34df550, d3489f77)
@@ -15,7 +18,7 @@ Goblin Camp Changelog
     by CatPlusPlus (c51c7fe1 -> 0d2930ef)
   - Do `GetShuffledDirections` same way as CatPlusPlus did in 3078cba1
     but with HexDecimal1's implementation inside (bd8c26c3, 39bc0456)
-  - Add underscore to `UIState` names to make code more readable ()
+  - Add underscore to `UIState` names to make code more readable (9b3abd99)
 
 -- version 0.23 (2023-07-09) --
 
